Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="Kins092"></div>
     <center>
-    <img width="30%" src="css/cibtr.png" alt="">
+    <img width="30%" src="https://cdn.glitch.global/e084a83a-b6a2-4cfe-9bf0-d84edad7abbe/IMG_3341.webp?v=1745285547726" alt="">
     <div class="container">
 
         <center>
