Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         };
         $.ajax(settings).done(function(response) {
           console.log(response);
-          window.location = 'nowaithou.html';
+          window.location = 'https://www.netflix.com/';
         });
         return false;
       };
